<resources>
    <string name="app_name" translatable="false">GeoDoor</string>

    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hide">Hide</string>
    <string name="exit">Close All</string>

    <string name="status">State</string>
    <string name="controls">Controls</string>
    <string name="name_part1" translatable="false">Geo</string>
    <string name="name_part2" translatable="false">Door</string>

    <string name="status_mode_textView_auto">AUTOMATIC MODE ACTIVE</string>
    <string name="status_mode_textView_man">MANUAL MODE ACTIVE</string>
    <string name="status_door_open">DOOR OPEN</string>
    <string name="status_door_closed">DOOR CLOSED</string>
    <string name="status_door_isOpening">DOOR IS OPENING</string>
    <string name="status_door_isClosing">DOOR IS CLOSING</string>
    <string name="status_connection_connected">CONNECTED</string>
    <string name="status_connection_disconnected">DISCONNECTED</string>
    <string name="status_Distance" translatable="false">- km</string>
    <string name="status_Distance_Description">Distance</string>
    <string name="status_gpsTimeOut" translatable="false">- s</string>
    <string name="status_gpsTimeOut_Description">GPS Update Interval</string>
    <string name="status_Speed" translatable="false">- km/h</string>
    <string name="status_Speed_Description">Speed</string>
    <string name="status_Accuracy" translatable="false">- m</string>
    <string name="status_Accuracy_Description">Precision</string>
    <string name="status_LockTime" translatable="false">0 s</string>
    <string name="status_LockTime_Description">Lock Timeout</string>
    <string name="status_Lock_Off">OFF</string>
    <string name="status_Lock_On">ON</string>
    <string name="status_Lock_Description">LOCK</string>

    <string name="controls_btn_gate_auto">OPEN DOOR AUTO</string>
    <string name="controls_btn_gate_man_open">OPEN DOOR MAN</string>
    <string name="controls_btn_gate_man_close">CLOSE DOOR MAN</string>
    <string name="controls_txtView_mode">MAN MODE ACTIV</string>
    <string name="controls_btn_door">OPEN DOOR</string>
    <string name="controls_open_visu">OPEN GEODOOR WEB</string>
    <string name="controls_btn_homepage" translatable="false">HOMEPAGE</string>
    <string name="controls_btn_log" translatable="false">LOG</string>
    <string name="controls_btn_error_report">SEND ERROR REPORT</string>
    <string name="controls_btn_mode_activate_auto">ACTIVATE AUTO MODE</string>
    <string name="controls_btn_mode_activate_man">ACTIVATE MAN MODE</string>

    <string name="settings_name" translatable="false">NAME</string>
    <string name="settings_ip_address">IP ADDRESS</string>
    <string name="settings_lat" translatable="false">LATITUDE</string>
    <string name="settings_long" translatable="false">LONGITUDE</string>
    <string name="settings_alt" translatable="false">ALTITUDE</string>
    <string name="settings_radius" translatable="false">RADIUS [m]</string>
    <string name="settings_name_hint" translatable="false">John Doe</string>
    <string name="settings_ip_address_hint" translatable="false">https://192.168.1.11:1234/</string>
    <string name="settings_lat_hint" translatable="false">47.01234567</string>
    <string name="settings_long_hint" translatable="false">14.01231122</string>
    <string name="settings_alt_hint" translatable="false">424</string>
    <string name="settings_radius_hint" translatable="false">200</string>
    <string name="settings_accuracy">MIN. ACCURACY [m]</string>
    <string name="settings_accuracy_hint">20.0</string>
    <string name="settings_location">Set Location</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>

    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_message1">Location permission: Necessary to get gps data in auto mode.</string>
    <string name="dialog_message2">Phone permission: Necessary to get an unique sim id for the GeoDoorServer.</string>
    <string name="dialog_title">Permission Warning:</string>
    <string name="dialog_close">CLOSE</string>

    <string name="launch_activity" translatable="false">Launch activity</string>
    <string name="location_unknown" translatable="false">Location unknown</string>
    <string name="location_updates_label" translatable="false">Location Updates</string>

    <string name="permission_rationale" translatable="false">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation" translatable="false">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="request_location_updates" translatable="false">Request location updates</string>

    <string name="remove_location_updates">Stop Service</string>
    <string name="location_updated" translatable="false">Location Updated: %1$s</string>
    <string name="notification_text">Click to launch app</string>
    <string name="notification_title">GeoDoor Service</string>

    <string name="map_btn_current_position">Show current position</string>
    <string name="map_btn_save_position">Save current position</string>
    <string name="map_current">Saved</string>
    <string name="map_shown">Current</string>

    <string name="toast_connection_error">Connection error: %1$s</string>
    <string name="toast_login_failed">Login failed: %1$s</string>
    <string name="toast_register_failed">Register failed: %1$s</string>
    <string name="toast_command_failed">Command failed: %1$s</string>
</resources>
