<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_back"
            android:icon="@drawable/ic_arrow_back_white_48dp"
            android:title="@string/back" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_blue_48dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_48dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_hide"
            android:icon="@drawable/ic_hide_blue_48dp"
            android:title="@string/hide" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_close_white_48dp"
            android:title="@string/exit" />
    </group>
</menu>