<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_blue"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left"
            android:text="@string/dialog_title"
            android:textColor="@color/colorBlue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left"
            android:text="@string/dialog_message1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left"
            android:text="@string/dialog_message2"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="start">

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/warning_dialog_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlue"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_ok"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </com.andexert.library.RippleView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="end">

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/warning_dialog_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlue"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_close"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </com.andexert.library.RippleView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>