<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:visibility="visible"
    tools:context=".MapActivity">

    <ImageButton
        android:id="@+id/map_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_back_white_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/headline_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_medium_italic"
            android:gravity="center"
            android:text="@string/name_part1"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_medium_italic"
            android:gravity="center"
            android:text="@string/name_part2"
            android:textColor="@color/colorBlue"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_layout">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="5"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="5sp">

            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/map_btn_get_position"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlue"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/map_btn_current_position"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

            </com.andexert.library.RippleView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_weight="5"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="5sp">

            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/map_btn_save_position"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlue"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/map_btn_save_position"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

            </com.andexert.library.RippleView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/position_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_layout">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="5sp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="3.5"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/map_current"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:layout_weight="6.5"
                    android:gravity="center"
                    android:text="0.0,0.0"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" >
                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="5sp"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="3.5"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/map_shown"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:layout_weight="6.5"
                    android:gravity="center"
                    android:text="0.0,0.0"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" >
                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>